--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ env_logger = "0.11"
 chrono = "0.4"
 directories = "5.0"
 uuid = { version = "1.10", features = ["v4"] }
+encoding_rs = "0.8.35"
+image = "0.25.9"
+
+[build-dependencies]
+winres = "0.1.12"
