--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-notos"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
@@ -14,9 +14,10 @@ log = "0.4"
 env_logger = "0.11"
 chrono = "0.4"
 directories = "5.0"
-uuid = { version = "1.10", features = ["v4"] }
+uuid = { version = "1.10", features = ["v4", "serde"] }
 encoding_rs = "0.8.35"
 image = "0.25.9"
+arboard = "3.6.1"
 
 [build-dependencies]
 winres = "0.1.12"
