\wip: Implement JSON Formatter plugin and Enhance Plugin SDK
- Added JSON Formatter plugin to pretty-print JSON content.
- Updated Notos SDK to allow plugins to interact with editor state and request actions.
- Implemented PluginAction and EditorContext in notos_sdk.
- Refactored PluginManager and App logic to handle bidirectional plugin communication.
- Fixed borrow checker issues in main application loop.
- Updated About plugin to match new SDK trait."

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.1"
 edition = "2021"
 
 [workspace]
-members = ["notos_sdk", "plugins/notos_plugin_about"]
+members = ["notos_sdk", "plugins/notos_plugin_about", "plugins/notos_plugin_json_format"]
 
 [dependencies]
 notos_sdk = { path = "./notos_sdk" }
