chore: release v0.2.4 - extreme binary size optimization (~1.8MB) and system font loader

--- a/plugins/notos_plugin_about/Cargo.toml
+++ b/plugins/notos_plugin_about/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notos_plugin_about"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 
 [lib]
@@ -8,6 +8,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 notos_sdk = { path = "../../notos_sdk" }
-egui = "0.29.1"
-eframe = "0.29.1"
+egui = { version = "0.29.1", default-features = false }
+eframe = { version = "0.29.1", default-features = false }
 log = "0.4"
