--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-notos"
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 
 [workspace]
@@ -9,20 +9,21 @@ members = ["notos_sdk", "plugins/notos_plugin_about", "plugins/notos_plugin_json
 [dependencies]
 notos_sdk = { path = "./notos_sdk" }
 libloading = "0.8"
-eframe = "0.29.1"
-egui = "0.29.1"
+eframe = { version = "0.29.1", default-features = false, features = ["glow"] }
+egui = { version = "0.29.1", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-rfd = "0.15"
-anyhow = "1.0"
+rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] } # On windows this doesn't matter much but good practice
 log = "0.4"
-env_logger = "0.11"
-chrono = "0.4"
-directories = "5.0"
-uuid = { version = "1.10", features = ["v4", "serde"] }
-encoding_rs = "0.8.35"
-image = "0.25.9"
-arboard = "3.6.1"
+chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
+arboard = { version = "3.6.1", default-features = false }
 
 [build-dependencies]
 winres = "0.1.12"
+
+[profile.release]
+opt-level = "z"     # Optimize for size
+lto = "fat"          # Enable link-time optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations
+panic = "abort"     # Abort on panic
+strip = true        # Strip symbols from binary
