--- a/notos_sdk/Cargo.toml
+++ b/notos_sdk/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "notos_sdk"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 
 [dependencies]
-eframe = "0.29.1"
-egui = "0.29.1"
+eframe = { version = "0.29.1", default-features = false }
+egui = { version = "0.29.1", default-features = false }
 log = "0.4"
