--- a/plugins/notos_plugin_json_format/Cargo.toml
+++ b/plugins/notos_plugin_json_format/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notos_plugin_json_format"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 
 [lib]
@@ -8,6 +8,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 notos_sdk = { path = "../../notos_sdk" }
-egui = "0.29.1"
+egui = { version = "0.29.1", default-features = false }
+eframe = { version = "0.29.1", default-features = false }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
