--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] } 
 log = "0.4"
 chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
 arboard = { version = "3.6.1", default-features = false }
+image = { version = "0.25", default-features = false, features = ["png"] }
 
 [build-dependencies]
 winres = "0.1.12"
